# system_modes

./: .codecov.yml  3rd-party-licenses.txt  CONTRIBUTING.md  CPPLINT.cfg  NOTICE  README.md  codecov.yml  source_legal.md
.github/workflows/: ci-focal.yaml  ci-jammy.yaml  ci-rolling.yaml  ci.yaml  lint.yaml  test.yaml
launch_system_modes/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
launch_system_modes/launch_system_modes/: __init__.py
launch_system_modes/launch_system_modes/actions/: __init__.py  node.py  system.py  system_part.py
launch_system_modes/launch_system_modes/event_handlers/: __init__.py  on_mode_changed.py  on_state_transition.py
launch_system_modes/launch_system_modes/events/: __init__.py  change_mode.py  change_state.py  mode_changed.py  state_transition.py
launch_system_modes/test/test_launch_system_modes/: test_change_mode.py  test_change_state.py  test_mode_changed.py  test_node.py  test_state_transition.py  test_system.py
system_modes/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  changelog.rst  package.xml
system_modes/doc/: requirements.md
system_modes/include/system_modes/: mode.hpp  mode_handling.hpp  mode_impl.hpp  mode_inference.hpp  mode_manager.hpp  mode_monitor.hpp  mode_observer.hpp  visibility_control.hpp
system_modes/launch/: mode_manager.launch.py  mode_monitor.launch.py
system_modes/msg/: ModeEvent.msg
system_modes/src/: mode-manager-node.cpp  mode-monitor-node.cpp  mode_manager_node.cpp  mode_monitor_node.cpp
system_modes/src/system_modes/: mode.cpp  mode_handling.cpp  mode_impl.cpp  mode_inference.cpp  mode_manager.cpp  mode_monitor.cpp  mode_observer.cpp
system_modes/srv/: ChangeMode.srv  GetAvailableModes.srv  GetMode.srv
system_modes/test/: modefiles.h.in  test_default_mode.cpp  test_mode.cpp  test_mode_handling.cpp  test_mode_inference.cpp  test_mode_manager.cpp  test_mode_monitor.cpp  test_mode_observer.cpp  test_modes.yaml  test_modes_rules.yaml  test_modes_wrong.yaml  test_state_and_mode_struct.cpp
system_modes/test/launchtest/: example_modes.yaml  manager_and_monitor.launch.py.in  manager_and_monitor.py  manager_and_monitor_expected_output.regex  modes_observer.launch.py.in  modes_observer.py  modes_observer_expected_output.regex  modes_observer_test_node.cpp  redundant_mode_changes.py  redundant_mode_changes_expected_output.regex  redundant_mode_changes_modes.yaml  test_lifecycle_nodes.py  test_mixed_nodes.py  test_mode_manager_simple.launch.py.in  test_mode_manager_simple_expected_output.regex  two_independent_hierarchies.launch.py.in  two_independent_hierarchies.py  two_independent_hierarchies_expected_output.regex  two_independent_hierarchies_modes.yaml  two_lifecycle_nodes.launch.py.in  two_lifecycle_nodes.py  two_lifecycle_nodes_expected_output.regex  two_lifecycle_nodes_modes.yaml  two_mixed_nodes.launch.py.in  two_mixed_nodes.py  two_mixed_nodes_modes.yaml
system_modes_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  changelog.rst  example_modes.yaml  example_modes_with_namespace.yaml  package.xml
system_modes_examples/launch/: drive_base.launch.py  example_mode_manager.launch.py  example_system.launch.py  example_system_start_drive_base.launch.py  example_system_started.launch.py  example_system_with_namespace.launch.py  manipulator.launch.py
system_modes_examples/src/: drive_base.cpp  manipulator.cpp
system_modes_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  changelog.rst  package.xml
system_modes_msgs/msg/: Mode.msg  ModeEvent.msg
system_modes_msgs/srv/: ChangeMode.srv  GetMode.srv
test_launch_system_modes/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
test_launch_system_modes/test/: expected_output.regex  modefiles.h.in  node_test.launch.py.in  system_test.launch.py.in  system_test_expected_output.regex  test_modes.yaml
