<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_modes_examples</name>
  <version>0.2.1</version>
  <description>Simple example system for system_modes package.</description>
  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>system_modes</depend>
  <depend>libboost-program-options-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
