<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_modes_msgs</name>
  <version>0.7.1</version>
  <description>
    Interface package, containing message definitions and service definitions
    for the system modes package.
  </description>
  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://micro.ros.org/docs/concepts/client_library/lifecycle_and_system_modes/</url>
  <url type="repository">https://github.com/micro-ROS/system_modes</url>
  <url type="bugtracker">https://github.com/micro-ROS/system_modes/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
