<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_launch_system_modes</name>
  <version>0.8.0</version>
  <description>
    Launch tests for the launch_system_modes package, i.e. launch actions, events, and event
    handlers for system modes.
  </description>
  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://micro.ros.org/docs/concepts/client_library/lifecycle_and_system_modes/</url>
  <url type="repository">https://github.com/micro-ROS/system_modes</url>
  <url type="bugtracker">https://github.com/micro-ROS/system_modes/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>launch_system_modes</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>system_modes</depend>
  <depend>system_modes_msgs</depend>
  <depend>system_modes_examples</depend>

  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
